<resources>
    <string name="app_name">Samaritans Mumbai</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_add_user">Add User</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_main">Log In</string>

    <!--Strings related to Main activity -->
    \
    <string name="title_dashboard">Dashboard</string>

    <string name="title_notifications">Notifications</string>

    <!-- Strings related to Dashboard -->
    <string name="add_log_main">Add Log</string>
    <string name="view_logs_main">View Logs</string>
    <string name="view_caller_profiles">Caller\nProfiles</string>
    <string name="request_sub">Request Sub</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_main">Welcome to Samaritans Mumbai</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <string name="login_proceed">Proceed</string>
    <string name="logout_main">Logout</string>
    <string name="title_activity_create_user">Create User</string>


    <!-- Strings related to creating user -->
    <string name="create_user">Create User</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="enter_user_password">Enter User Password</string>
    <string name="enter_user_role">Enter User Role</string>
    <string name="submit_user">Submit</string>
    <string name="radio_admin">admin</string>
    <string name="radio_user">user</string>
    <string name="shift_day">Shift Day</string>
    <string-array name="shift_day_array">
        <item>N/A</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="shift_time">Shift Time</string>
    <string-array name="shift_time_array">
        <item>N/A</item>
        <item>3 to 6 pm</item>
        <item>6 to 9 pm</item>
    </string-array>
    <string name="proceed_create_user">Proceed to Create User</string>
    <string name="create_user_alert">Security alert!\nPlease login in again to create a new user!\n</string>

    <!-- Strings related to caller details -->
    <string name="tab_text_1">Basic</string>
    <string name="tab_text_2">Descriptive</string>
    <string name="tab_text_3">Other</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab1_description">Enter basic details of Caller</string>
    <string name="tab2_description">Enter descriptive details of Caller</string>
    <string name="tab3_description">Enter other details of Caller</string>

    <!-- Strings related to basic caller details -->
    <string name="cd_date">Date:</string>
    <string name="cd_male_female">Gender:</string>
    <string name="cd_male">Male</string>
    <string name="cd_female">Female</string>
    <string name="cd_tel_door">Tel/Door:</string>
    <string name="cd_tel">Tel</string>
    <string name="cd_door">Door</string>
    <string name="cd_new_old">New/Old:</string>
    <string name="cd_new">New</string>
    <string name="cd_old">Old</string>
    <string name="cd_suicide_qn">Suicide Question:</string>
    <string name="cd_Y">Yes</string>
    <string name="cd_N">No</string>
    <string name="cd_risk_level">Risk Level:</string>
    <string name="cd_risk_0">0</string>
    <string name="cd_risk_1">1</string>
    <string name="cd_risk_2">2</string>
    <string name="cd_risk_3">3</string>

    <string-array name="nature_array">
        <item>N/A</item>
        <item>1 - Mental Illness</item>
        <item>2 - Terminal Illness</item>
        <item>3 - Depression</item>
        <item>4 - Family Problems</item>
        <item>5 - Relationship Problems</item>
        <item>6 - Marital Problems</item>
        <item>7 - Sexual Problems</item>
        <item>8 - Financial Problems</item>
        <item>9 - Professional Problems</item>
        <item>10 - Educational Problems</item>
        <item>11 - Loneliness</item>
        <item>12 - Failure</item>
        <item>13 - Grief</item>
        <item>14 - Loss</item>
        <item>15 - Old Age</item>
        <item>16 - Poverty</item>
        <item>17 - Sexually Demanding</item>
        <item>18 - Any other</item>
    </string-array>
    <string name="cd_caller_name">Caller Name:</string>
    <string name="cd_caller_age">Caller Age:</string>
    <string name="cd_caller_support">Support:</string>
    <string name="cd_support_F">F</string>
    <string name="cd_support_A">A</string>
    <string name="cd_support_H">H</string>
    <string name="cd_support_PG">PG</string>
    <string name="cd_caller_occupation">Occupation:</string>
    <string name="cd_occupation_E">E</string>
    <string name="cd_occupation_UE">UE</string>
    <string name="cd_occupation_B">B</string>
    <string name="cd_occupation_S">S</string>
    <string name="cd_occupation_R">R</string>
    <string name="cd_occupation_W">W</string>
    <string name="cd_time">Time:</string>
    <string name="cd_time_colon">:</string>
    <string-array name="am_pm_array">
        <item>PM</item>
        <item>AM</item>
    </string-array>
    <string name="cd_duration">Duration:</string>
    <string name="cd_duration_hours">Hours</string>
    <string name="double_zero">00</string>
    <string name="cd_duration_mins">Mins</string>
    <string name="cd_language">Language:</string>
    <string name="cd_lang_E">E</string>
    <string name="cd_lang_M">M</string>
    <string name="cd_lang_H">H</string>
    <string name="cd_lang_G">G</string>
    <string name="cd_frequent_caller">Frequent Caller:</string>
    <string name="cd_plan">Plan:</string>
    <string name="cd_attempt">Attempt:</string>

    <!-- Strings related to descriptive caller details -->
    <string name="cd_gist">Gist:</string>
    <string name="cd_feelings">Feelings Addressed:</string>
    <string name="cd_vol_response">Volunteers Response:</string>
    <string name="cd_call_end">How did the call end:</string>

    <!-- Strings related to other caller details -->
    <string name="cd_sam_name">Samaritan Name:</string>
    <string name="cd_pseudo_name">Pseudo Name:</string>
    <string name="cd_default_blank">Blank if not applicable</string>
    <string name="cd_sam_leader">Leader Name:</string>
    <string name="cd_sam_leader_msg">Special Message from Leader:</string>
    <string name="cd_self_assessment">Self Assessment:</string>
    <string name="cd_assess_stood">Stood By</string>
    <string name="cd_assess_lead">Lead</string>
    <string name="cd_assess_pushed">Pushed</string>
    <string name="cd_refer_PU">Referred to PU:</string>
    <string name="cd_nature_problem">Nature of Problem:\n(Primary)</string>
    <string name="cd_nature_problem_secondary">Nature of Problem:\n(Secondary)</string>
    <string name="cd_nature_problem_secondary_view_single">(Secondary)</string>
    <string name="cd_nature_problem_secondary_hint">comma separated</string>

    <!-- Strings related to view logs -->
    <string name="card_sams_name">Samaritan</string>
    <string name="card_sams_date">Date</string>
    <string name="card_sr_no">Sr No</string>

    <!-- Strings related to send notification -->
    <string name="title_activity_send_notification">Send Notification</string>
    <string name="send_notif_title">Title</string>
    <string name="send_notif_body">Message</string>

    <!-- Strings related to caller profile -->
    <string name="title_activity_caller_profile">Caller Profiles</string>
    <string name="title_activity_create_caller_profile">Create Caller Profile</string>
    <string name="caller_profile_name">Name</string>
    <string name="caller_profile_age">Age</string>
    <string name="caller_profile_common_identifiers">Common Identifiers</string>
    <string name="caller_profile_support_system">Support System (parents, wife, etc.)</string>
    <string name="caller_profile_occupation">Occupation</string>
    <string name="caller_profile_health_issues">Health Issues (mental and physical)</string>
    <string name="caller_profile_frequency">Frequency of calls(per week)</string>
    <string name="caller_profile_suicide_attempts">Suicide attempts, if any (number and details)</string>
    <string name="caller_profile_gist">Gist of calls/issues so far</string>
    <string name="caller_profile_new_info">New information/progress of the caller</string>
    <string name="caller_profile_updates_ref_no">Ref No:</string>
    <string name="caller_profile_updates_date">Date:</string>
    <string name="caller_profile_updates_details">Details:</string>
    <string name="caller_profile_updates">Updates:</string>


    <!-- Random Strings -->
    <string name="network_location_access">Please make sure your Internet is ON in order to login!</string>
    <string name="na">N/A</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_view_logs_recycler">Logs</string>
    <string name="title_activity_recieve_notification">New Notification</string>
    <string name="title_activity_update_caller_profile">UpdateCallerProfile</string>
    <string name="title_activity_select_sub">Select User</string>

</resources>
