<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/tab_linear_layout_child1_field17"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cd_occupation"
            android:layout_width="wrap_content"
            android:textSize="@dimen/small_font"
            android:layout_height="wrap_content"
            android:text="@string/cd_caller_occupation"/>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="start"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/cd_radio_occupation_E"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cd_occupation_E"
                android:textSize="@dimen/small_font"
                android:checked="true"
                android:padding="5dp"
                android:onClick="onRadioButtonClickedCD"/>
            <RadioButton android:id="@+id/cd_radio_occupation_UE"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cd_occupation_UE"
                android:textSize="@dimen/small_font"
                android:padding="5dp"
                android:onClick="onRadioButtonClickedCD"/>
            <RadioButton android:id="@+id/cd_radio_occupation_B"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cd_occupation_B"
                android:textSize="@dimen/small_font"
                android:padding="5dp"
                android:onClick="onRadioButtonClickedCD"/>
            <RadioButton android:id="@+id/cd_radio_occupation_S"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cd_occupation_S"
                android:textSize="@dimen/small_font"
                android:padding="5dp"
                android:onClick="onRadioButtonClickedCD"/>
            <RadioButton android:id="@+id/cd_radio_occupation_W"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cd_occupation_W"
                android:textSize="@dimen/small_font"
                android:padding="5dp"
                android:onClick="onRadioButtonClickedCD"/>
        </RadioGroup>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>