<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tab_linear_layout_child3"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field1"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sams_name_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:text="@string/cd_sam_name"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sams_name_tv_val"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/small_font"
                android:text="@string/na"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field2"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sams_pseudo_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:labelFor="@id/sams_pseudo_name_val"
                android:text="@string/cd_pseudo_name"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sams_pseudo_name_val"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/small_font"
                android:inputType="textCapWords"
                android:hint="@string/cd_default_blank"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field3"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cd_problem_nature"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:layout_height="wrap_content"
                android:text="@string/cd_nature_problem"/>
            <Spinner
                android:id="@+id/spinner_cd_problem_nature_val"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:dropDownWidth="fill_parent"
                android:background="@android:drawable/btn_dropdown"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field8"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cd_problem_nature_secondary"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:layout_height="50dp"
                android:text="@string/cd_nature_problem_secondary"/>
            <EditText
                android:id="@+id/cd_problem_nature_secondary_val"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/cd_nature_problem_secondary_hint"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field6"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cd_self_assessment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:layout_height="wrap_content"
                android:text="@string/cd_self_assessment"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:orientation="vertical">
                <RadioButton android:id="@+id/cd_radio_stood_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_assess_stood"
                    android:textSize="@dimen/small_font"
                    android:checked="true"
                    android:onClick="onRadioButtonClickedCD"/>
                <RadioButton android:id="@+id/cd_radio_lead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_assess_lead"
                    android:textSize="@dimen/small_font"
                    android:onClick="onRadioButtonClickedCD"/>
                <RadioButton android:id="@+id/cd_radio_pushed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_assess_pushed"
                    android:textSize="@dimen/small_font"
                    android:onClick="onRadioButtonClickedCD"/>

            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field7"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cd_PU_referred"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:layout_height="wrap_content"
                android:text="@string/cd_refer_PU"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/cd_radio_PU_Y"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_Y"
                    android:textSize="@dimen/small_font"
                    android:checked="true"
                    android:onClick="onRadioButtonClickedCD"/>
                <RadioButton android:id="@+id/cd_radio_PU_N"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cd_N"
                    android:textSize="@dimen/small_font"
                    android:onClick="onRadioButtonClickedCD"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field4"
            android:layout_width="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sams_leader_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:labelFor="@id/sams_leader_name_val"
                android:text="@string/cd_sam_leader"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sams_leader_name_val"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textCapWords"
                android:textSize="@dimen/small_font" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_linear_layout_child3_field5"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sams_leader_msg"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/small_font"
                android:labelFor="@id/sams_leader_msg_val"
                android:text="@string/cd_sam_leader_msg"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/sams_leader_msg_val"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/small_font"
                android:inputType="textMultiLine|textCapSentences"
                android:padding="10dp"
                android:layout_height="100dp"
                android:gravity="top"
                android:background="@drawable/edit_text_style"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>